Fixed 1 bug & added some new functionalities: - Fixed bug; Page navigation now reverts to the last page, when a page is requested that is too high. - Added the possibility to pass a callback function to lovd_AJAX_viewListSubmit() that will be executed when the viewList is done loading. - Added the possibility to add checkboxes to all entries in a viewList and a menu that allows you to perform actions to these entries. - Added a JS function cancelParentEvent() that prevents events from propagating to the parent elements. - Added a JS function lovd_recordCheckChanges() that records clicked checkboxes in a viewList and sends these ids to the viewList PHP code through GET. - Added a JS function lovd_showOptions() that shows a list of options(e.g. "select all/select none") in a small popup window. - Rewrote parts of the submission process code. - Implemented the new lovd_buildOptionTable() into the submission process. - Implemented a functionality to confirm ealier found variants with a screening. - Implemented a function generateRowID() in objects.php that sets the proper row_id in viewLists, because we needed this code in other parts of the viewList as well. - When removing a transcript from the variant descriptions LOVD will show a warning when the red cross is clicked.
git-svn-id: https://humgenprojects.lumc.nl/svn/LOVD3/trunk@138 a7477d18-a37e-46de-aef1-57953c184492

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
  * LEIDEN OPEN VARIATION DATABASE (LOVD)
  *
  * Created     : 2009-10-20
- * Modified    : 2012-02-21
+ * Modified    : 2012-03-14
  * For LOVD    : 3.0-beta-03
  *
  * Copyright   : 2004-2012 Leiden University Medical Center; http://www.LUMC.nl/
@@ -35,11 +35,12 @@ input, textarea, button, select {font-family : Verdana, Helvetica, Arial, sans-s
 select                          {padding-left : 0px; padding-right : 0px;}
 input:hover, input:focus, textarea:hover, textarea:focus, button:hover, select:hover, select:focus
                                 {background : #F0F3FF; border : 1px solid #112244;}
+input.checkbox                  {background : #F0F3FF; border : 0px;}
 input:disabled, select:disabled, .err:disabled, .err:hover:disabled
                                 {color : #444444; background : #DDDDDD; border : 1px solid #333333;}
 th                              {text-align : left;} /* Because IE auto-centers them */
 .bold                           {font-weight : bold;}
-
+img.link                        {cursor : pointer;}
 
 
 /* Headings */
@@ -123,10 +124,11 @@ input.err:hover, input.err:focus, textarea.err:hover, textarea.err:focus, button
 img.form_hr      {background : #CCCCCC;}
 img.help         {margin-top : 4px; cursor : help;}
 span.form_note   {font-size : 11px; color : #666666;}
-div.tooltip      {background : #F0F3FF; border : 1px solid #224488; padding : 2px; font-size : 11px; width : 300px; position : absolute; display : none;}
+div.tooltip, div.options
+                 {background : #F0F3FF; border : 1px solid #224488; padding : 2px; font-size : 11px; width : 300px; position : absolute; display : none;}
 img.tooltip-hide {position : absolute; right : 0px; top : 0px; cursor : pointer;}
 span.custom_link {text-decoration : none; border-bottom : 1px dashed black;}
-
+div.options      {padding : 0px;}
 
 
 /* For tables on the setup page */
@@ -138,19 +140,20 @@ table.setup tr.pointer:hover    {background : #E0E9FF;}
 
 
 /* Often used table for views of lists and entries. */
-table.data                      {font-size : 11px; border : 1px solid #AFC8FA;}
-table.data a                    {color : #0000FF;}
-table.data a.hide               {color : #000000; text-decoration : none;} /* Somehow it doesn't get the color-thing when it's not defined within table.data */
-table.data th                   {background : #AFC8FA; padding-left : 4px; padding-right : 4px;}
-table.data td                   {background : #F0F3FF; padding-left : 4px; padding-right : 4px;}
-table.data tr.data:hover td     {background : #C8DCFA;}
-table.data input:disabled       {color : #000000; background : #FFFFFF; border : 1px solid #224488;}
-/*table.data tr.del a             {color : #AAAAAA;}
-table.data tr.del td            {background : #F8FAFF; color : #AAAAAA;}
-table.data tr.del_hover a       {color : #AAAAAA;}
-table.data tr.del_hover td      {background : #C8DCFA; color : #AAAAAA;}
-table.data tr.marked td         {background : #FFF0F0;}
-table.data tr.marked_hover td   {background : #FAD5D5;}*/
+table.data                               {font-size : 11px; border : 1px solid #AFC8FA;}
+table.data a                             {color : #0000FF;}
+table.data a.hide                        {color : #000000; text-decoration : none;} /* Somehow it doesn't get the color-thing when it's not defined within table.data */
+table.data th                            {background : #AFC8FA; padding-left : 4px; padding-right : 4px;}
+table.data td                            {background : #F0F3FF; padding-left : 4px; padding-right : 4px;}
+table.data tr.data:hover td              {background : #C8DCFA;}
+table.data tr.data:hover td.checkbox     {background : #F0F3FF; cursor : default;}
+table.data input:disabled                {color : #000000; background : #FFFFFF; border : 1px solid #224488;}
+/*table.data tr.del a                    {color : #AAAAAA;}
+table.data tr.del td                     {background : #F8FAFF; color : #AAAAAA;}
+table.data tr.del_hover a                {color : #AAAAAA;}
+table.data tr.del_hover td               {background : #C8DCFA; color : #AAAAAA;}
+table.data tr.marked td                  {background : #FFF0F0;}
+table.data tr.marked_hover td            {background : #FAD5D5;}*/
 
 /* Used for ordering the data tables per column. */
 table.data th.order             {cursor : pointer;}
@@ -207,7 +210,7 @@ ul.sortable li          {margin : 1px; background : #F0F3FF; padding-left : 0px;
 ul.sortable td.handle   {cursor : move;}
 ul.sortable input       {border : 0px;}
 
-/* For submit questions*/
+/* For option table*/
 table.option                           {width : 850px; font-size : 14px; border : 1px solid #AFC8FA;}
 table.option td                        {background : #F0F3FF; padding-left : 4px; padding-right : 4px;}
 table.option tr:hover td               {background : #C8DCFA; cursor : pointer;}
